# tasekit

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: ENDPOINTS.md
src/tasekit/: __init__.py  api.py  cli.py  constants.py  exceptions.py  hedge_fund.py  index.py  parsers.py  security.py
tests/: conftest.py  test_api.py  test_cli.py  test_hedge_fund.py  test_index.py  test_parsers.py  test_security.py
tests/data/: hedge_detail_1194141.json  hedge_history_anchor_1194869.json  hedge_history_snapshot_1194141.json  hedge_list_page1.json  hedge_metadata_1194141.json  sample_eod.csv  sample_etf_eod.csv  sample_index_eod.csv
